# GLSLCompiler

./: .gitignore  GLSL.sublime-build  LICENSE  README.md  glslcompiler
Src/: CMakeLists.txt  main.cpp  ogl.cpp  ogl.h
